force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/FPS_Bor_Temporary_Storage__c.object-meta.xml
<CustomObject>
    <description>Intial CSV file is loaded into this object then its records are transformed to Service Contracts and Contract Line Items.
Borealis/FPS POC custom object</description>
    <label>Temporary Storage</label>
    <nameField>
        <displayFormat>TEMP - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporary Storages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>