force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Adjusted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Quantity__c</fullName>
    <formula>IF(VALUE(SUBSTITUTE(SUBSTITUTE(Shifted_Quantity__c,&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;.&quot;)) &lt; 0, -1* VALUE(SUBSTITUTE(SUBSTITUTE(Shifted_Quantity__c,&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;.&quot;)),VALUE(SUBSTITUTE(SUBSTITUTE(Shifted_Quantity__c,&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;.&quot;))) -
IF(VALUE(SUBSTITUTE(SUBSTITUTE(Allocated_Quantity__c,&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;.&quot;)) &lt; 0, -1* VALUE(SUBSTITUTE(SUBSTITUTE(Allocated_Quantity__c,&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;.&quot;)), VALUE(SUBSTITUTE(SUBSTITUTE(Allocated_Quantity__c,&quot; &quot;,&quot;&quot;),&quot;,&quot;,&quot;.&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>