force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Allocated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Quantity__c</fullName>
    <label>Allocated Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>