force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/ATP_VSOP_Region__c.field-meta.xml
<CustomField>
    <fullName>ATP_VSOP_Region__c</fullName>
    <label>ATP VSOP Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>HU</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>