force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/CM_Master_Description__c.field-meta.xml
<CustomField>
    <fullName>CM_Master_Description__c</fullName>
    <label>CM Master Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>