force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/CM_Master_Number__c.field-meta.xml
<CustomField>
    <fullName>CM_Master_Number__c</fullName>
    <description>Used to update (upsert) correct contract line item.</description>
    <label>CM Master Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>