force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Contract_Line_Item_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item_Unique_Id__c</fullName>
    <formula>CM_Master_Number__c +&apos;_&apos;+Posting_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Line Item Unique Id</label>
    <type>Text</type>
</CustomField>