force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Contracted_Quantity_MIN__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Quantity_MIN__c</fullName>
    <label>Contracted Quantity MIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>