force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Customer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Name__c</fullName>
    <label>Customer Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Constr and Industry</fullName>
            </value>
            <value>
                <fullName>CRT</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Replenishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>