force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Is_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Contract__c</fullName>
    <formula>AND(
				NOT(ISBLANK(Posting_Period__c)),
				Posting_Period__c = &apos;0&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Service Contract</label>
    <type>Checkbox</type>
</CustomField>