force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Lifted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Lifted_Quantity__c</fullName>
    <label>Lifted Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>