force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Minus_tolerance_in__c.field-meta.xml
<CustomField>
    <fullName>Minus_tolerance_in__c</fullName>
    <label>Minus tolerance in %</label>
    <length>100</length>
    <type>Text</type>
</CustomField>