force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Multi_Item_Master__c.field-meta.xml
<CustomField>
    <fullName>Multi_Item_Master__c</fullName>
    <label>Multi Item Master</label>
    <length>100</length>
    <type>Text</type>
</CustomField>