force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Amount__c</fullName>
    <label>Penalty Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>