force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Penalty_Interval__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Interval__c</fullName>
    <label>Penalty Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>