force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>