force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Plus_tolerance_in__c.field-meta.xml
<CustomField>
    <fullName>Plus_tolerance_in__c</fullName>
    <label>Plus tolerance in %</label>
    <length>100</length>
    <type>Text</type>
</CustomField>