force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Posting_Period__c.field-meta.xml
<CustomField>
    <fullName>Posting_Period__c</fullName>
    <label>Posting Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>