force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Posting_Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Period_Date__c</fullName>
    <formula>IF(
				Is_Service_Contract__c,
				null,
				DATE(VALUE(LEFT(Posting_Period__c, 4)), VALUE(RIGHT(Posting_Period__c, 2)), 1) 
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Period Date</label>
    <type>Date</type>
</CustomField>