force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Product_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Group__c</fullName>
    <formula>CASE(Product_Group__c, 
						&quot;DK&quot;, &quot;Diesel&quot;, 
						&quot;DKF&quot;, &quot;Diesel&quot;, 
						&quot;DKP&quot;, &quot;Diesel&quot;, 
						&quot;DKP_BIO&quot;, &quot;Diesel&quot;,
						&quot;EUR_ASF&quot;, &quot;Gasoline&quot;, 
						&quot;EUR_BIO&quot;, &quot;Gasoline&quot;, 
						&quot;EUR_E10&quot;, &quot;Gasoline&quot;, 
						&quot;EUR_PURE&quot;, &quot;Gasoline&quot;, 
						&quot;HEL&quot;, &quot;HEL&quot;, 
						&quot;SADK&quot;, &quot;Diesel&quot;, 
						&quot;SU+&quot;, &quot;Gasoline&quot;, 
						&quot;SU100&quot;, &quot;Gasoline&quot;, 
						&quot;VIT&quot;, &quot;HEL&quot;, 
						&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category Group</label>
    <type>Text</type>
</CustomField>