force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Represents unique external Price Instance ID. Used to match Price Instance (and as result also Product) with Contract Line Item.</description>
    <label>Product Group</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>