force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Product_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Name__c</fullName>
    <label>Product Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>Mitteldestilate</fullName>
            </value>
            <value>
                <fullName>Ottokraftstoffe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>