force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Service_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Name__c</fullName>
    <formula>Customer__c +&apos;_&apos;+Product_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract Name</label>
    <type>Text</type>
</CustomField>