force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Shifted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shifted_Quantity__c</fullName>
    <label>Shifted Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>