force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <label>Storage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>ETLB</fullName>
            </value>
            <value>
                <fullName>LOB</fullName>
            </value>
            <value>
                <fullName>LUS</fullName>
            </value>
            <value>
                <fullName>MOL_S</fullName>
            </value>
            <value>
                <fullName>RIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>