force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>