force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Valid_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_From_Date__c</fullName>
    <formula>DATE(VALUE(LEFT(Valid_From__c, 4)), VALUE(RIGHT(Valid_From__c, 2)), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>