force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Valid_to__c.field-meta.xml
<CustomField>
    <fullName>Valid_to__c</fullName>
    <label>Valid to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>