force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/fields/Valid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_To_Date__c</fullName>
    <formula>IF(VALUE(RIGHT(Valid_to__c, 2)) = 12, 
					DATE(VALUE(LEFT(Valid_to__c, 4)), VALUE(RIGHT(Valid_to__c, 2)), 31),
			DATE(VALUE(LEFT(Valid_to__c, 4)), VALUE(RIGHT(Valid_to__c, 2))+1, 1)-1
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid To Date</label>
    <type>Date</type>
</CustomField>