force-app/main/default/objects/FPS_Bor_Temporary_Storage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Service_Contract__c</columns>
    <columns>Service_Contract_Name__c</columns>
    <columns>CM_Master_Description__c</columns>
    <columns>CM_Master_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Category_Group__c</columns>
    <columns>Posting_Period_Date__c</columns>
    <columns>Sales_Representative__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>